feat(AS-29): standardized error handling (#9)
* feat: add android tables

* style: prefer POST over PUT

* feat: add new DB handlers and use them to implement POST /accounts

* chore: RunInTransaction helper

* docs: regenerate swagger files

* docs: fix swagger annotation

* fix: don't send both success and error responses

* feat: remove android_group_android table

* docs: swagger update

* test: update tests

* style: avoid sql as a variable name

* feat: standardized error handling

* docs: regenerate swagger docs

* fix: 404 check for DB delete operations

* test: non-200 checks for /accounts endpoints

* style: cleanup

* feat: catch and report DB errors

* style: switch over if/else

* style: handle validation error generically

* docs: error handling comments

* stule: cleanup
