# model/account.go
@@ -1,5 +1,9 @@
 package model
 
+import (
+	api_errors "kidsloop/account-service/errors"
+)
+
 type Account struct {
 	ID string `json:"id"`
 }
@@ -13,14 +17,12 @@ type AndroidGroup struct {
 	ID string `json:"id"`
 }
 
-type APIError struct {
-	Code    string      `json:"code"`
-	Message string      `json:"message"`
-	Details interface{} `json:"details"`
-}
-
 type CreateAccountResponse struct {
 	Account      Account      `json:"account"`
 	Android      Android      `json:"android"`
 	AndroidGroup AndroidGroup `json:"android_group"`
+}
+
+type ErrorResponse struct {
+	Errors []api_errors.APIErrorResponse `json:"errors"`
 }
